src/test/ui/test-attrs/inaccessible-test-modules.stderr
error[E0432]: unresolved import `main`
  --> $DIR/inaccessible-test-modules.rs:5:5
   |
LL | use main as x;
   |     ----^^^^^
   |     |
   |     no `main` in the root
   |     help: a similar name exists in the module: `main`

error[E0432]: unresolved import `test`
  --> $DIR/inaccessible-test-modules.rs:6:5
   |
LL | use test as y;
   |     ^^^^^^^^^ no `test` in the root
   |
help: a similar name exists in the module
   |
LL | use test as y;
   |     ~~~~
help: consider importing this module instead
   |
LL | use test::test;
   |     ~~~~~~~~~~~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
